--- a/src/index.scss
+++ b/src/index.scss
@@ -30,10 +30,11 @@ code {
 
 .actions {
   position: fixed;
-  left: 0;
-  right: 0;
+  left: 50%;
+  transform: translate(-50%);
   bottom: 50px;
 }
+
 @media (max-width: 992px) {
   button{
     font-size: 14pt;
@@ -49,49 +50,16 @@ code {
   }
 
   h1{
-    margin-top: 15%;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
   }
-  p{
-    padding: 1em;
-  }
-  h1 {
-    margin-top: 41%;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    margin-left: 1em;
-    padding-right: 2em;
-  }
-
-
-
-  .img-quiz-1 {
-    position: static;
-    margin-top: -110% !important;
-    width: 16% !important;
-    margin-left: 94% !important;
-    z-index: -1 !important;
-  }
-  .img-quiz-2{
-    margin-top: 23% !important;
-    width: 45% !important;
-    margin-right: 55% !important;
-}
-  
-  .text-quiz{
-    padding: 1em;
-    padding-right: 2em;
-    margin-block-start: -3em !important;
-  }
-
 
   .button-motion-1{
-    margin-top: 55%;
+    margin-left: 45px
   }
 
   .img-bg-1{
-    margin-top: 15%;
+    margin-bottom: 50px;
   }
 
   .img-bg-2{
@@ -107,6 +75,6 @@ code {
     z-index: -2; 
   }
 }
-  
+
 
 
