--- a/src/index.scss
+++ b/src/index.scss
@@ -30,11 +30,10 @@ code {
 
 .actions {
   position: fixed;
-  left: 50%;
-  transform: translate(-50%);
+  left: 0;
+  right: 0;
   bottom: 50px;
 }
-
 @media (max-width: 992px) {
   button{
     font-size: 14pt;
@@ -50,16 +49,65 @@ code {
   }
 
   h1{
+    margin-top: 15%;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
   }
+  p{
+    padding: 1em;
+    line-height: 25px;
+  }
+  h1 {
+    margin-top: 41%;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    margin-left: 1em;
+    padding-right: 2em;
+    
+  }
+
+
+
+  .img-quiz-1 {
+    position: static;
+    margin-top: -110% !important;
+    width: 16% !important;
+    margin-left: 94% !important;
+    z-index: -1 !important;
+  }
+  .img-quiz-2{
+    margin-top: 23% !important;
+    width: 45% !important;
+    margin-right: 55% !important;
+  }
+  
+  .text-quiz {
+    padding: 1em;
+    padding-right: 2em;
+    margin-block-start: -2em !important;
+    margin-block-end: -3em !important;
+}
+
+  .btn-quiz{
+    font-size: 14pt;
+    background-color: white;
+    border: solid 3.5px black;
+    padding-top: 1.5%;
+    padding-left: 4%;
+    padding-right: 4%;
+    padding-bottom: 1.5%;
+    margin-top: 15%;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    margin-right: 234px;
+  }
 
   .button-motion-1{
-    margin-left: 45px
+    margin-top: 55%;
   }
 
   .img-bg-1{
-    margin-bottom: 50px;
+    margin-top: 15%;
   }
 
   .img-bg-2{
@@ -70,11 +118,35 @@ code {
     top: -41.54px;
   }
 
+  .img-motion2{
+    width: 56%;
+    margin-left: 172px;
+  }
+  .h1-motion2{
+    margin-top: -13% !important;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    margin-left: 1em;
+    padding-right: 2em;
+    -webkit-text-stroke: 1px white;
+  }
+  .btn2-motion2 {
+    margin-bottom: 7px;
+    margin-top: 7% !important;
+}
+
+  .text-motion2 {
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 91px;
+}
+
+
   svg{
     position: absolute;
     z-index: -2; 
   }
 }
-
+  
 
 
