--- a/src/index.scss
+++ b/src/index.scss
@@ -28,10 +28,15 @@ code {
 }
 
 .actions {
+  display: flex;
   position: fixed;
   left: 50%;
   transform: translate(-50%);
   bottom: 50px;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  height: 20%;
 }
 
 @media (max-width: 992px) {
