--- a/src/index.scss
+++ b/src/index.scss
@@ -19,13 +19,7 @@ code {
     monospace;
 }
 
-.container{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-}
+
 
 .actions {
   display: flex;
@@ -138,9 +132,10 @@ code {
     line-height: 30px;
   }
 
-  .h1-quiz{
-    padding-right: 1em;
-  }
+  .h1-quiz {
+    padding-right: 2em;
+    padding-left: 1em;
+}
 
   svg{
     position: absolute;
