--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0px;
 }
 
 #root {
@@ -28,12 +29,9 @@ code {
 
 .actions {
   display: flex;
-  position: fixed;
-  left: 50%;
-  transform: translate(-50%);
-  bottom: 50px;
-  justify-content: space-between;
   flex-direction: column;
+  height: 150px;
+  justify-content: space-around;
   align-items: center;
 }
 
