--- a/src/index.scss
+++ b/src/index.scss
@@ -127,6 +127,22 @@ code {
     }
   }
 
+  .img-motion1, .img-quiz, .img-motion2, .img-resume1, .img-transition, .img-quiz2, .img-motion3, .img-resume2,
+  .img-award2, .img-quiz3, .img-motion4, .img-resume3, .img-answer3,{
+    position: absolute;
+    top: 0;
+    right: 0px;
+    z-index: -1;
+    
+}
+
+.img-quiz, .img-transition, .img-quiz2, .img-quiz3, {
+  top: 40px;
+}
+
+.img-resume1{
+  width: 149px;
+  }
   .img-bg-1{
     position: absolute;
     top: 20%;
